test/compile-fail/resolution/use-private-mod/top.rhdl
mod a {
    mod b {
        struct c {}
    }
}

use a::b::c;
